[package]
name = "rclrs_generate_bindings"
version = "0.5.1"
# This project is not military-sponsored, Jacob's employment contract just requires him to use this email address
authors = ["Esteve Fernandez <esteve@apache.org>", "Nikolai Morin <nnmmgit@gmail.com>", "Jacob Hassold <jacob.a.hassold.civ@army.mil>"]
edition = "2021"
license = "Apache-2.0"
description = "A ROS 2 client library for developing robotics applications in Rust"
rust-version = "1.75"

[[bin]]
name = "rclrs_generate_bindings"
path = "src/main.rs"

[dependencies]
# Needed to generate the bindings
bindgen  = "0.70"

# Needed to ensure the generator is being called from the correct workspace directory
cargo-manifest = "0.17"
