[package]
name = "rclrs"
version = "0.6.0"
# This project is not military-sponsored, Jacob's employment contract just requires him to use this email address
authors = ["Esteve Fernandez <esteve@apache.org>", "Nikolai Morin <nnmmgit@gmail.com>", "Jacob Hassold <jacob.a.hassold.civ@army.mil>"]
edition = "2021"
license = "Apache-2.0"
description = "A ROS 2 client library for developing robotics applications in Rust"
rust-version = "1.75"

[lib]
path = "src/lib.rs"

# Please keep the list of dependencies alphabetically sorted,
# and also state why each dependency is needed.
[dependencies]
# Needed for dynamically finding type support libraries
ament_rs = { version = "0.2", optional = true }

# Needed to create the GoalClientStream
async-stream = "0.3.6"

# Needed for uploading documentation to docs.rs
cfg-if = "1.0.0"

# Needed for clients
futures = "0.3"

# Needed for racing futures
futures-lite = { version = "2.6", features = ["std", "race"] }

# Needed for the runtime-agnostic timeout feature
async-std = "1.13"

# Needed for dynamic messages
libloading = { version = "0.8", optional = true }

# Needed for the Message trait, among others
rosidl_runtime_rs = "0.5"

# Needed for serliazation and deserialization of vendored messages
serde = { version = "1", optional = true, features = ["derive"] }
serde-big-array = { version = "0.5.1", optional = true }

# Needed to watch for the cancel signal for actions. Note that this only brings
# in the sync module of tokio, which is a fairly light weight dependency. The
# channels in this module work with any async runtime, so this does not lock us
# into the tokio runtime.
tokio = { version = "1", features = ["sync"] }

# Needed to combine concurrent streams for easier ergonomics in action clients
tokio-stream = "0.1"

# Needed by action clients to generate UUID values for their goals
uuid = { version = "1", features = ["v4"] }

[dev-dependencies]
# Needed for e.g. writing yaml files in tests
tempfile = "3.3.0"
# Needed for parameter service tests
tokio = { version = "1", features = ["rt", "time", "macros"] }

[build-dependencies]
# Needed for uploading documentation to docs.rs
cfg-if = "1.0.0"
rustflags = "0.1"

[features]
default = []
dyn_msg = ["ament_rs", "libloading"]
serde = ["dep:serde", "dep:serde-big-array", "rosidl_runtime_rs/serde"]
# This feature is solely for the purpose of being able to generate documetation without a ROS installation
# The only intended usage of this feature is for docs.rs builders to work, and is not intended to be used by end users
use_ros_shim = ["rosidl_runtime_rs/use_ros_shim"]

[package.metadata.docs.rs]
features = ["use_ros_shim"]
rustc-args = ["--cfg", "ros_distro=\"humble\""]
