[package]
name = "rclrs_examples"
version = "0.1.0"
authors = ["Esteve Fernandez <esteve@apache.org>"]
edition = "2018"

[[bin]]
name = "rclrs_subscriber"
path = "src/rclrs_subscriber.rs"

[[bin]]
name = "rclrs_publisher"
path = "src/rclrs_publisher.rs"

[dependencies]
thiserror = "1"
anyhow = {version = "1", features = ["backtrace"]}
cstr_core = "0.2"

[dependencies.rclrs_common]
version = "*"
path = "/home/jhassold/rolling_ws/install/rclrs_common/share/rclrs_common/rust"

[dependencies.rclrs]
version = "*"
path = "/home/jhassold/rolling_ws/install/rclrs/share/rclrs/rust"

[dependencies.std_msgs]
path = '/home/jhassold/rolling_ws/install/std_msgs/share/std_msgs/rust'