[package]
name = "rclrs_examples"
version = "0.2.0"
authors = ["Esteve Fernandez <esteve@apache.org>"]
edition = "2021"

[[bin]]
name = "minimal_subscriber"
path = "src/minimal_subscriber.rs"

[[bin]]
name = "minimal_publisher"
path = "src/minimal_publisher.rs"

[[bin]]
name = "message_demo"
path = "src/message_demo.rs"

[dependencies]
anyhow = {version = "1", features = ["backtrace"]}

[dependencies.rclrs]
version = "*"

[dependencies.rosidl_runtime_rs]
version = "*"

[dependencies.std_msgs]
version = "*"

[dependencies.rclrs_example_msgs]
version = "*"
