<?xml version="1.0"?>
<package format="2">
  <name>rclrs_sys</name>
  <version>0.0.1</version>
  <description>Generated bindings to the RCL.</description>
  <author email="esteve@apache.org">Esteve Fernandez</author>
  <maintainer email="esteve@apache.org">Esteve Fernandez</maintainer>
  <license>Apache License 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_cmake_export_crates</buildtool_depend>

  <build_depend>builtin_interfaces</build_depend>
  <build_depend>rcl</build_depend>
  <build_depend>rcl_interfaces</build_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
