<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format2.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="2">
  <name>rosidl_generator_rs</name>
  <version>0.0.3</version>
  <description>Generate the ROS interfaces in Rust.</description>
  <author email="esteve@apache.org">Esteve Fernandez</author>
  <maintainer email="esteve@apache.org">Esteve Fernandez</maintainer>
  <license>Apache License 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <buildtool_depend>ament_cmake_export_crates</buildtool_depend>
  <buildtool_depend>rclrs_common</buildtool_depend>

  <buildtool_export_depend>ament_cmake</buildtool_export_depend>
  <buildtool_export_depend>ament_cmake_export_crates</buildtool_export_depend>
  <buildtool_export_depend>rosidl_cmake</buildtool_export_depend>
  <buildtool_export_depend>rclrs_common</buildtool_export_depend>
  <buildtool_export_depend>rosidl_typesupport_c</buildtool_export_depend>
  <buildtool_export_depend>rosidl_typesupport_interface</buildtool_export_depend>

  <exec_depend>rmw_implementation</exec_depend>
  <exec_depend>rmw_implementation_cmake</exec_depend>
  <exec_depend>rosidl_generator_c</exec_depend>
  <exec_depend>rosidl_parser</exec_depend>

  <test_depend>ament_cmake_gtest</test_depend>
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <test_depend>rmw_implementation</test_depend>
  <test_depend>rmw_implementation_cmake</test_depend>
  <test_depend>rosidl_generator_c</test_depend>

  <test_depend>rosidl_parser</test_depend>
  <test_depend>rosidl_cmake</test_depend>
  <!-- Duplicated from rosidl_default_generator in order to avoid a circular dependency. -->
  <test_depend>rosidl_typesupport_c</test_depend>
  <test_depend>rosidl_typesupport_connext_c</test_depend>
  <test_depend>rosidl_typesupport_introspection_c</test_depend>
  <test_depend>rosidl_typesupport_opensplice_c</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
